Fixed some issues about footer, added new content in the main section. --Look at the mobile menu z-index problem.

--- a/assets/css/input.css
+++ b/assets/css/input.css
@@ -1,15 +1,16 @@
 @import "tailwindcss";
 
 @theme {
-    /* Blue shades */
-    --color-myblue-100: #DCE6EF;
+    --color-myblue-100: #DCE6EF; /* Blue shades */
     --color-myblue-200: #BED1E2;
     --color-myblue-300: #79A1C3;
     --color-myblue-400: #2F4F6A;
-    /* Brown shades*/
-    --color-mybrown-100: #E3D0C0;
+    --color-mybrown-100: #E3D0C0; /* Brown shades*/
     --color-mybrown-200: #CBA98B;
     --color-mybrown-300: #6A4B2F;
+
+    /* Font Family Lexend */
+    --font-lex: "Lexend", sans-serif; 
 }
 
 .clip-blob {
